<resources>
    <string name="app_name">MovieApp</string>
    <string name="tv_splash_text_placeholder">Placeholder</string>
    <string name="iv_splash_logo_desc">Logo for splash screen</string>
    <string name="tv_splash_text_rand_1">Capybaras are cute</string>
    <string name="tv_splash_text_rand_2">I hope you have a lovely day!</string>
    <string name="tv_splash_text_rand_3">Making apps is fun</string>
    <string name="tv_splash_text_rand_4">Stop eating too many sweets!</string>
    <string name="tv_splash_text_rand_5">Woo, that\'s shiny!</string>
    <string name="tv_splash_text_rand_6">Gee, that\'s swell!</string>
    <string name="tv_splash_text_rand_7">It\'s not a bug, it\'s a feature!</string>
    <string name="tv_splash_text_rand_8">Remember to treat yourself every day!</string>
    <string name="tv_splash_text_rand_9">Live, laugh, love!</string>
    <string name="btn_actors">Actors</string>
    <string name="btn_genres">Genres</string>
    <string name="welcome_onboarding">Welcome to MovieApp</string>
    <string name="head_onboarding">To begin discovering movies, choose your preferences.</string>
    <string name="number_one">1.</string>
    <string name="number_two">2.</string>
    <string name="actors_check_desc">Saved preferences for Actors</string>
    <string name="genres_check_desc">Saved preferences for genres</string>
    <string name="fab_onboarding_desc">Click the floating button to proceed further</string>
    <string name="genres_title">Genres</string>
    <string name="actors_title">Actors</string>
    <string name="genres_desc">Choose your favorite movie genres in the list below</string>
    <string name="actors_desc">What actors do you like?</string>
    <string name="title_main">SearchScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MovieApp</string>
    <string name="nav_header_subtitle">baby version</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_search">Search</string>
    <string name="menu_saved">Saved</string>
    <string name="tab_text_favorite">Favorite</string>
    <string name="tab_text_watched">Watched</string>
    <string name="title_activity_test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search a movie ...</string>
    <string name="menu_details">Details</string>
    <string name="rd_title_placeholder">Title</string>
    <string name="rd_orig_title_head">Original title</string>
    <string name="rd_orig_title_content">TextView</string>
    <string name="rd_release_date_head">Release date</string>
    <string name="rd_release_date_content">TextView</string>
    <string name="rd_overview_head">Overview</string>
    <string name="rd_overview_content">TextView</string>
    <string name="rd_genres_head">Genres</string>
</resources>