<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/tvRdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ao"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginBottom="20dp"
        android:text="@string/rd_title_placeholder" />

    <TextView
        android:id="@+id/tvRdOrigTitleHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="10dp"
        android:text="@string/rd_orig_title_head" />

    <TextView
        android:id="@+id/tvRdOrigTitleContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/rd_orig_title_content" />

    <TextView
        android:id="@+id/tvRdReleaseDateHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="10dp"
        android:text="@string/rd_release_date_head" />

    <TextView
        android:id="@+id/tvRdReleaseDateContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/rd_release_date_content" />

    <TextView
        android:id="@+id/tvRdOverviewHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="10dp"
        android:text="@string/rd_overview_head" />

    <TextView
        android:id="@+id/tvRdOverviewContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/rd_overview_content" />
</LinearLayout>