<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobileNavigation"
    app:startDestination="@+id/navSearch">

    <fragment
        android:id="@+id/navSearch"
        android:name="com.practica.movieapp.ui.searchui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navSaved"
        android:name="com.practica.movieapp.ui.searchui.saved.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navDetails"
        android:name="com.practica.movieapp.ui.searchui.details.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details" />
</navigation>