<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/ytp_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_details_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ytp_player"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_fd_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ao"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:text="@string/rd_title_placeholder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/iv_fd_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_marginEnd="8dp"
                    tools:src="@drawable/ic_image_placeholder"
                    tools:tint="@color/magenta_300"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rd_orig_title_head"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/tv_fd_orig_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/rd_orig_title_content"
                        android:textColor="@color/lighter_grey"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rd_release_date_head"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/tv_fd_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/rd_orig_title_content"
                        android:textColor="@color/lighter_grey"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rd_genres_head"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginBottom="4dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_fd_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/rv_details_genre" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/ib_fd_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/violet_200_30a"
                            app:srcCompat="@drawable/ic_heart_favorite_border"
                            app:tint="?attr/colorPrimary" />

                        <ImageButton
                            android:id="@+id/ib_fd_watched"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/violet_200_30a"
                            app:srcCompat="@drawable/ic_saved_border"
                            app:tint="?attr/colorPrimary" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_overview_head"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tv_fd_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/rd_overview_content"
                android:textColor="@color/lighter_grey"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>